force-app/main/default/objects/ApexIds__mdt/ApexIds__mdt.object-meta.xml
<CustomObject>
    <label>ApexId</label>
    <pluralLabel>ApexIds</pluralLabel>
</CustomObject>