force-app/main/default/objects/ApexIds__mdt/fields/GeneralId__c.field-meta.xml
<CustomField>
    <fullName>GeneralId__c</fullName>
    <label>General Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>