force-app/main/default/objects/ApexIds__mdt/fields/LiberId__c.field-meta.xml
<CustomField>
    <fullName>LiberId__c</fullName>
    <label>Liber Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>