force-app/main/default/objects/ApexIds__mdt/fields/NoordhoffId__c.field-meta.xml
<CustomField>
    <fullName>NoordhoffId__c</fullName>
    <label>Noordhoff Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>