force-app/main/default/objects/ApexIds__mdt/fields/PlantynId__c.field-meta.xml
<CustomField>
    <fullName>PlantynId__c</fullName>
    <label>Plantyn Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>